add revised conclusion section

--- a/index.html
+++ b/index.html
@@ -677,11 +677,6 @@
                                 <div class="row">
                                     <div class="col-lg-12 text-center">
                                         <h2 class="section-heading">Conclusion</h2>
-                                        <p>In conclusion we want to run through the use case of our dashboard. Our
-                                          dashboard is meant to be used by a credit analyst to make a quick, model-assisted
-                                          decision about whether or not to grant a loan to an applicant while being informed
-                                          as to the model's fairness to protected classes. We accomplish the first part of
-                                          this goal by covering fairness based on four standard metrics on a global level.</p>
 
                                         <p> The primary use of our dashboard is for a credit analyst to make quick and accurate
                                           decisions.  We approach this part of the problem by presenting both a high level intuition
@@ -690,6 +685,9 @@
                                           The analysis of the model's decision for the individual in question is central to the report and represents
                                           the tool a credit analyst would primarily rely on. </p>
 
+                                          <p>However, just making a better informed decision on acceptable features is not enough to ensure
+                                            that the decision process is really fair to all people groups. We also include a fairness
+                                            section in our dashboard where we present four standard statistical tests for fairness. </p>
 
                                           <p>We think this report will be helpful for credit analysts and enable them to make quick and
                                           accurate loan approval decisions while having visibility to the assisting model's fairness. In addition,
