Modeling approach doodle changesz

--- a/index.html
+++ b/index.html
@@ -414,10 +414,10 @@
 
 
 
-              <h3 class="section-heading">2. Interpretability</h3>
+              <h3 class="section-heading">Interpretability</h3>
               <hr class="my-4">
 
-              <h3 class="section-heading">3. Fairness</h3>
+              <h3 class="section-heading">Fairness</h3>
               <hr class="my-4">
 
     <section id="Literature Review">
