add skimpy results section

--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@
             There are many open research questions. So far, we assume we are given a fully-trained black-box model and that we cannot change the model. One important question is how can we bake in the notion of fairness to the training of a black-box model from the beginning? Another interesting direction is to measure the level of fairness in the decisions made for an individual, regardless of the global statistical behavior of the model (local fairness).
             </p>
           </br>
-          
+
             <h3 class="section-heading">4. Testing</h3>
             <hr class="my-4">
             <p>
@@ -631,8 +631,12 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12 text-center">
-                        <h2 class="section-heading">All the things</h2>
-                        <hr class="my-4">
+                        <h2 class="section-heading">Results</h2>
+                        <p>Our final result is a dashboard with four pages that hits the main themes we touched in the above section. The first
+                        page covers the model's performance with the metrics like AUC and Accuracy.  The second page covers the global fairness of the model.
+                      The final two pages of the dashboard are both about interpretability.  The first of these pages covers local interpretability, while the
+                    last page covers global interpretability.</p><p> We could continue to describe our dashboard with text, but, as they say, a dashboard is worth 1000 words.</p>
+                        <!-- <hr class="my-4"> -->
                     </div>
                 </div>
             </div>
@@ -642,7 +646,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12 text-center">
-                        <h2 class="section-heading">Exigo has it all</h2>
+                        <h2 class="section-heading">Why don't we just show you?</h2>
                         <hr class="my-4">
                     </div>
                 </div>
