last touches on website

--- a/index.html
+++ b/index.html
@@ -875,32 +875,32 @@
                 <div class="row">
                     <div class="col-lg-12 text-center">
                         <h2 class="section-heading text-white">Conclusion</h2>
-                        <hr class="light my-4">
+                        <hr class="my-4">
 
-                        <p class="text-faded text-justified"> The primary use of our dashboard is for a credit analyst to make quick and accurate
-                        decisions.  We approach this part of the problem by presenting both a high level intuition
+                        <p class="text-faded text-justified"> The primary use of our dashboard is for a credit analyst to make <span>quick and accurate
+                        decisions</span>.  We approach this part of the problem by presenting both a high level intuition
                         for the model's decisions and a specific analysis of the model's decision for the specific instance
-                        in question. The intuition part is accomplished by our model performance and global patterns sections.
+                        in question. The intuition part is accomplished by our <span>model performance</span> and <span>global patterns</span> sections.
                         The analysis of the model's decision for the individual in question is central to the report and represents
                         the tool a credit analyst would primarily rely on. </p>
 
                         <p class="text-faded">However, just making a better informed decision on acceptable features is not enough to ensure
-                        that the decision process is really fair to all people groups. We also include a fairness
-                        section in our dashboard where we present four standard statistical tests for fairness. </p>
+                        that the decision process is really fair to all people groups. We also include a <span>fairness
+                        section</span> in our dashboard where we present <span>four standard statistical tests</span> for fairness. </p>
 
                         <p class="text-faded">We think this report will be helpful for credit analysts and enable them to make quick and
                         accurate loan approval decisions while having visibility to the assisting model's fairness. In addition,
-                        we built the dashboard to be model-agnostic and suitable to report on any binary classification problem.</p>
+                        we built the dashboard to be <span>model-agnostic</span> and suitable to report on any binary classification problem.</p>
 
                         <h2 class="section-heading text-white mt-5">Future Work</h2>
-                        <hr class="light my-4">
+                        <hr class="my-4">
 
                         <p class="text-faded">There are many different directions we could take this project to improve it. A necessary next
-                        step is to implement the human evaluation testing we propose in the
+                        step is to implement the <span>human evaluation testing</span> we propose in the
                         Approach section of the report. Some other interesting next steps include offering
-                        a "fairness slider" where the user can change the fairness for their model and
+                        a <span>"fairness slider"</span> where the user can change the fairness for their model and
                         see the impact on accuracy of the model. The final proposal for future work, and the
-                        most interesting to us as a team, is a generalization of the dashboard to support both
+                        most interesting to us as a team, is a <span>generalization of the dashboard</span> to support both
                         multinomial classification and regression models.
                         </p>
 
