I need to go to sleep

--- a/index.html
+++ b/index.html
@@ -84,11 +84,11 @@
                     <div class="col-lg-8 mx-auto text-center">
                         <h2 class="section-heading text-white">Exigo - Overview</h2>
                         <hr class="light my-4">
-                        <p class="text-faded mb-4">Exigo is a Greek word meaning "to measure or weigh against a standard."  We named
-                        our report after this idea of weighing against a standard because our dashboard will act as that
-                        standard used to weigh a model.  Our dashboard will give credit analysts insights into the accuracy,
+                        <p class="text-faded mb-4">Exigó (εξηγώ) means "to explain" in Greek. We offer a dashboard for machine learning models
+                        that does just that: it explains, in various ways, the clockwork of lending models.
+                        Our dashboard will give credit analysts insights into the accuracy,
                         fairness and reasons behind the model's decisions.  We hope the dashboard will increase both a
-                        credit analyst's speed to make a decision and accuracy in making the right decisions.</p>
+                        credit analyst's speed to make a decision and accuracy in making the right chices.</p>
 
                         <h2 class="section-heading text-white">What is the goal of the project?</h2>
                         <p class="text-faded mb-4">The high-level goal of our project was to create a tool that will be practically
