add typo and testing icon fixes

--- a/index.html
+++ b/index.html
@@ -699,21 +699,21 @@
                     <div class="row">
                         <div class="col-lg-4  col-md-6  text-center">
                             <div class="service-box mt-5 mx-auto">
-                                <i class="fa fa-4x  fa-cogs mb-3 sr-icons"></i>
+                                <i class="fa fa-4x  fa-cogs mb-3 sr-icons" data-sr-id="5" style="; visibility: visible;  -webkit-transform: scale(1); opacity: 1;transform: scale(1); opacity: 1;-webkit-transition: -webkit-transform 0.6s cubic-bezier(0.6, 0.2, 0.1, 1) 0s, opacity 0.6s cubic-bezier(0.6, 0.2, 0.1, 1) 0s; transition: transform 0.6s cubic-bezier(0.6, 0.2, 0.1, 1) 0s, opacity 0.6s cubic-bezier(0.6, 0.2, 0.1, 1) 0s; "></i>
 
                                 <p class="text-muted mb-0">We propose to test our dashboard with a speed comparison between analysts with and without our dashboard. </p>
                             </div>
                         </div>
                         <div class="col-lg-4 col-md-6 text-center">
                             <div class="service-box mt-5 mx-auto">
-                                <i class="fa fa-4x  fa-user mb-3 sr-icons"></i>
+                                <i class="fa fa-4x  fa-user mb-3 sr-icons" data-sr-id="5" style="; visibility: visible;  -webkit-transform: scale(1); opacity: 1;transform: scale(1); opacity: 1;-webkit-transition: -webkit-transform 0.6s cubic-bezier(0.6, 0.2, 0.1, 1) 0s, opacity 0.6s cubic-bezier(0.6, 0.2, 0.1, 1) 0s; transition: transform 0.6s cubic-bezier(0.6, 0.2, 0.1, 1) 0s, opacity 0.6s cubic-bezier(0.6, 0.2, 0.1, 1) 0s; "></i>
 
                                 <p class="text-muted mb-0">The testing process will also control for accuracy to make sure we provide accurate, not just decisive, insights. </p>
                             </div>
                         </div>
                         <div class="col-lg-4 col-md-6 text-center">
                             <div class="service-box mt-5 mx-auto">
-                                <i class="fa fa-4x  fa-check-square mb-3 sr-icons"></i>
+                                <i class="fa fa-4x  fa-check-square mb-3 sr-icons" data-sr-id="5" style="; visibility: visible;  -webkit-transform: scale(1); opacity: 1;transform: scale(1); opacity: 1;-webkit-transition: -webkit-transform 0.6s cubic-bezier(0.6, 0.2, 0.1, 1) 0s, opacity 0.6s cubic-bezier(0.6, 0.2, 0.1, 1) 0s; transition: transform 0.6s cubic-bezier(0.6, 0.2, 0.1, 1) 0s, opacity 0.6s cubic-bezier(0.6, 0.2, 0.1, 1) 0s; "></i>
 
                                 <p class="text-muted mb-0">A human evaluation test like this will be able to validate if our dashboard adds tangible value to a credit analyst.</p>
                             </div>
@@ -722,7 +722,7 @@
                 </div>
 
             </br>
-            <p> Although this testing setup would not be very difficult to execute given the right resources, pleanty of credit analysts, we do
+            <p> Although this testing setup would not be very difficult to execute given the right resources, plenty of credit analysts, we do
             not have access to the necessary resources and were not be able to perform this testing. </p>
 
           </div>
@@ -809,7 +809,7 @@
                 <div class="col-lg-8 mx-auto text-center">
                   <h2 class="section-heading mt-5">Why don't we just show you?</h2>
                     <p class="mt-3 text-muted">
-                      The Demo currently runs on a LGBMModel trained with 10% of the data, so as to reduce processing delays during the presentation.
+                      The Demo currently runs on a LGBM Model trained with 10% of the data, so as to reduce processing delays during the presentation.
                       You will, nevertheless, be able to witness Exigo's full dynamic report generation on the fly.
                     </p>
                 </div>
