add fairness and interp changes to report

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 
                         <p id="chart1">
 
-                        <script>  sankey_plot() </script>
+                        <script>  sankey_plot("data/grade_data.json") </script>
 
                         <div class="container-fluid" href="#eda">
                             <div class="text-center">
@@ -268,7 +268,7 @@
                             </div>
                             <!-- </div> -->
                             <script src="js/helper.js" stype='text/javascript'></script>
-                            <script> sundisk_plot("hir_sq2.json")
+                            <script> sundisk_plot("data/hir_sq2.json")
 
                             </script>
                             </br>
@@ -299,7 +299,7 @@
                             </style>
                             <div id="chart3"></div>
                             <script src="js/helper.js" stype='text/javascript'></script>
-                            <script> plot_line("amnt_data.csv")
+                            <script> plot_line("data/amnt_data.csv")
                             </script>
                             </br>
                             <h3>Loan Amount over Time</h3>
